<resources>
    <string name="app_name">Birthdays Reminder</string>
    <string name="btn_add">Add</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>

    <!-- Fragments titles -->
    <string name="fragment_birthdays">BIRTHDAYS</string>
    <string name="fragment_settings">SETTINGS</string>
    <string name="fragment_notes">NOTES</string>
    <string name="fragment_wishes">WISHES</string>

    <!-- Fragment BIRTHDAYS -->
    <string name="no_birthdays_recycler">No birthdays! Add one using the button below!</string>
    <string name="no_search_result">No birthdays found</string>
    <string name="no_name">Name can\'t be empty! Try again.</string>
    <string name="open_options_description">Open options</string>
    <string name="search_hint">Search birthdays</string>
    <string name="btn_edit_birthday_description">Edit birthday</string>
    <string name="btn_delete_birthday_description">Delete birthday</string>

    <!-- Fragment NOTES -->
    <string name="no_notes_recycler">No notes! If you got an idea for someone\'s birthday and you don\'t want to forget it, add notes using the button below!</string>
    <string name="no_note_content">Note content can\'t be empty! Try again.</string>
    <string name="btn_edit_note_description">Edit note</string>
    <string name="btn_delete_note_description">Delete note</string>

    <!-- Fragment OPTIONS -->
    <string name="options_language">App language</string>
    <string name="current_language">English</string>
    <string name="language_explanation">The application uses your phone\'s language settings to determine its language. Currently, the only supported
                                        languages are English (default) and Croatian.</string>
    <string name="options_nightMode">Night Mode</string>
    <string name="nightMode_explanation">It is possible that when changing the night mode, there is an uncontrolled change of the night and day theme for a second, but it should work from a few attempts. I will try to find the reason and fix it.</string>

    <!-- Fragment WISHES -->
    <string name="no_wishes_recycler">Something might be wrong with retrieving the list of wishes. Please contact the app author or try again later.</string>
    <string name="wishes_only_english">Note: the birthday wishes are only in English.</string>
    <string name="wishes_relation">Recommended for: %1$s</string>
    <string name="wishes_filter_description">Choose a relation to filter wishes</string>

    <!-- Dialog add birthday -->
    <string name="add_name">Insert name</string>
    <string name="add_surname">Insert surname</string>
    <string name="select_date">Select date</string>
    <string name="add_birthday">Add birthday</string>
    <string name="cancel_birthday">Cancel</string>
    <string name="new_birthday">New birthday date</string>
    <string name="new_birthday_description">Enter a person and their birthday date, the app will help you remember their birthday! Well, as long as you remember to use the app :)</string>

    <!-- Dialog edit birthday -->
    <string name="edit_birthday">Edit birthday</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_date">Edit date</string>
    <string name="edit_birthday_description">Got someone\'s birthday wrong? :/ Edit the existing birthday.</string>

    <!-- Dialog add note -->
    <string name="add_note">Insert note</string>
    <string name="add_note_content">Write a note</string>
    <string name="new_note">New note</string>
    <string name="new_note_description">Thought about something for someone\'s birthday? Write it up as a note so you don\'t forget it.</string>
    <string name="important">Important</string>

    <!-- Dialog edit note -->
    <string name="edit_note">Edit note</string>
    <string name="edit_note_description">Change of plans? Edit the existing note.</string>
    <string name="created_date_note">Created:</string>
    <string name="edited_date_note">Last edited:</string>

    <!-- Selected birthday -->
    <string name="_100">100</string>
    <string name="selected_name">Name</string>
    <string name="selected_date">Date</string>
    <string name="countdown_to_birthday">Countdown</string>

    <!-- Birthday item -->
    <string name="_years">Years</string>
    <string name="_name">Name</string>
    <string name="_date">Date</string>

    <!-- Months -->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <!-- Months (short) -->
    <string name="january_short">JAN</string>
    <string name="february_short">FEB</string>
    <string name="march_short">MAR</string>
    <string name="april_short">APR</string>
    <string name="may_short">MAY</string>
    <string name="june_short">JUN</string>
    <string name="july_short">JUL</string>
    <string name="august_short">AUG</string>
    <string name="september_short">SEP</string>
    <string name="october_short">OCT</string>
    <string name="november_short">NOV</string>
    <string name="december_short">DEC</string>

    <!-- Gender -->
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_neither">Neither/Irrelevant</string>

    <!-- Birthday Wish Relations -->
    <string-array name="choice_relations">
        <item>Anyone</item>
        <item>Mother</item>
        <item>Father</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Grandmother</item>
        <item>Grandfather</item>
        <item>Boyfriend</item>
        <item>Girlfriend</item>
        <item>Fiance</item>
        <item>Wife</item>
        <item>Husband</item>
        <item>Son</item>
        <item>Grand-son</item>
        <item>Daughter</item>
        <item>Grand-daughter</item>
        <item>Niece</item>
        <item>Nephew</item>
        <item>Uncle</item>
        <item>Aunt</item>
        <item>Cousin</item>
        <item>Mother-in-law</item>
        <item>Father-in-law</item>
        <item>Brother-in-law</item>
        <item>Sister-in-law</item>
        <item>Friend</item>
        <item>Colleague</item>
        <item>Teacher</item>
        <item>Student</item>
        <item>Boss</item>
    </string-array>

    <!-- Misc. -->
    <string name="details">Details</string>
    <string name="details_with_line">Details -\u0020</string>
    <string name="birthday_date"> %1$d / %2$d / %3$d </string>
    <string name="in_development">In development</string>
</resources>