<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/birthdaysFragment">

    <fragment
        android:id="@+id/birthdaysFragment"
        android:name="ungar.mvvm.birthdayapp.ui.birthdays.BirthdaysFragment"
        android:label="@string/fragment_birthdays"
        tools:layout="@layout/fragment_birthdays" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ungar.mvvm.birthdayapp.ui.settings.SettingsFragment"
        android:label="@string/fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/notesFragment"
        android:name="ungar.mvvm.birthdayapp.ui.notes.NotesFragment"
        android:label="@string/fragment_notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/wishesFragment"
        android:name="ungar.mvvm.birthdayapp.ui.wishes.WishesFragment"
        android:label="@string/fragment_wishes"
        tools:layout="@layout/fragment_wishes" />
</navigation>