<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detailsImportant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.25"
        android:src="@drawable/ic_priority_24"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/detailsNoteDateLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/selected_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/detailsNoteDateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsContent">

        <TextView
            android:id="@+id/detailsNoteDateString"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/created_date_note"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/detailsNoteDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/selected_date"
            android:textAlignment="textStart" />

    </LinearLayout>

    <Button
        android:id="@+id/btnEditNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/btn_edit_note_description"
        android:paddingVertical="6dp"
        android:text="@string/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsNoteDateLayout" />

    <Button
        android:id="@+id/btnDeleteNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:contentDescription="@string/btn_delete"
        android:paddingVertical="6dp"
        android:text="@string/btn_delete_note_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditNote" />


</androidx.constraintlayout.widget.ConstraintLayout>