<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailsYears"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.25"
        android:gravity="center_vertical"
        android:text="@string/_100"
        android:textAlignment="center"
        android:textSize="82sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/detailsCountdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/selected_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsBirthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/selected_date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsName" />

    <TextView
        android:id="@+id/detailsCountdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/countdown_to_birthday"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsBirthDate" />

    <Button
        android:id="@+id/btnEditBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/btn_edit_description"
        android:paddingVertical="6dp"
        android:text="@string/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsCountdown" />

    <Button
        android:id="@+id/btnDeleteBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:contentDescription="@string/btn_delete"
        android:paddingVertical="6dp"
        android:text="@string/btn_delete_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditBirthday" />


</androidx.constraintlayout.widget.ConstraintLayout>